# docs/swagger.json
@@ -563,7 +563,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "id\":int\t\"Successful response with product ID",
+                        "description": "id\" :int\t\"Successful response with product ID",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -867,7 +867,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "status\":\t\"ok\"\t\"Successful response",
+                        "description": "status\":\"ok\"\t\"Successful response",
                         "schema": {
                             "$ref": "#/definitions/handler.StatusResponse"
                         }
@@ -1099,6 +1099,14 @@
         },
         "types.Product": {
             "type": "object",
+            "required": [
+                "available_stock",
+                "category",
+                "last_update_date",
+                "name",
+                "price",
+                "supplier_id"
+            ],
             "properties": {
                 "available_stock": {
                     "type": "integer"
