# types/product.go
@@ -1,12 +1,12 @@
 package types
 
 type Product struct {
-	Name           string  `json:"name"`
-	Category       string  `json:"category"`
-	Price          float64 `json:"price"`
-	AvailableStock int     `json:"available_stock"`
-	LastUpdateDate string  `json:"last_update_date"`
-	SupplierID     int     `json:"supplier_id"`
+	Name           string  `json:"name" binding:"required"`
+	Category       string  `json:"category" binding:"required"`
+	Price          float64 `json:"price" binding:"required"`
+	AvailableStock int     `json:"available_stock" binding:"required"`
+	LastUpdateDate string  `json:"last_update_date" binding:"required"`
+	SupplierID     int     `json:"supplier_id" binding:"required"`
 	Image          []byte  `json:"image,omitempty"`
 }
 
